# gnome-software-plugin-apk2

./: .gitignore  README.md  meson.build
data/: org.gnome.Software.Plugin.Apk2.metainfo.xml
src/: meson.build
src/gs-plugin-apk2/: lib.vala  meson.build
src/shared/: config.vapi
src/vapi/: ApkPolkit2-0.metadata  AppStream-1.0.metadata  GnomeSoftware-20.metadata  Gs-20.metadata  Gs-21.metadata  Gs-48.metadata  Gs-49.deps  Gs-49.metadata  meson.build
tests/: config.vapi  gs-self-test.vala  meson.build
